<resources>
    <string name="app_name">百望富通</string>
    <string name="zh">账号</string>
    <string name="mm">密码</string>
    <string name="forget">忘记密码</string>
    <string name="regis">立即注册</string>
    <string name="logtv">登录代表同意</string>
    <string name="userargee">《消费者注册协议》</string>
    <string name="zhh">账号或密码错误,请重新输入</string>
    <string name="sure">确定</string>
    <string name="zhanwei1">占位符占</string>
    <string name="zhanwei2">占位符占位符占位符</string>
    <string name="zhanwei3">占位符占位符占位符占位符</string>




</resources>
