<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WhiteColor"
    >

    <include layout="@layout/fragclude"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="35dp">

        <ImageView

            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@mipmap/ic_launcher_round" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:paddingTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zh"
                    android:textColor="@color/textColor2"
                    android:textSize="18dp" />

                <com.example.administrator.bwft3.utils.ClearEditText
                    android:id="@+id/usered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="18dp"
                    android:background="@null"
                    android:hint="请输入你的账号"
                    android:textSize="18dp" />


            </LinearLayout>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:background="#b7b3b3"
                android:padding="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mm"
                    android:textColor="@color/textColor2"
                    android:textSize="18dp" />

                <com.example.administrator.bwft3.utils.ClearEditText
                    android:id="@+id/passed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="18dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="请输入你的密码"
                    android:inputType="textPassword"
                    android:textSize="18dp" />

                <ToggleButton
                    android:id="@+id/togglePwd"
                    android:layout_width="18dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:background="@mipmap/see2"
                    android:gravity="right"
                    android:padding="10dp" />


            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"

                android:background="#b7b3b3" />
        </LinearLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@drawable/buttonshapegray"
            android:text="登录"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/forgettv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/forget"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/regintv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/regis"
                android:textSize="14sp"

                />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="120dp">

            <TextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:text="使用其他方式登录"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#999"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/tv"
                android:background="#999" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/tv"
                android:background="#999"
                android:textSize="13dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">


            <ImageView
                android:id="@+id/logQQ"
                android:layout_width="47dp"
                android:layout_height="47dp"
                android:src="@mipmap/qq2"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dp"

                />

            <ImageView
                android:id="@+id/logWeixin"
                android:layout_width="47dp"
                android:layout_height="47dp"
                android:layout_centerInParent="true"
                android:layout_marginLeft="30dp"
                android:src="@mipmap/weixin2" />

            <ImageView
                android:id="@+id/logwb"
                android:layout_width="47dp"
                android:layout_height="47dp"
                android:layout_marginRight="20dp"
                android:layout_alignParentRight="true"
                android:src="@mipmap/weibo2" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logtv"
                android:textColor="@color/TextColor3" />

            <TextView
                android:id="@+id/userargee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autoLink="all"
                android:text="@string/userargee"
                android:textColor="@color/TextColor3" />
        </LinearLayout>
    </LinearLayout>






</LinearLayout>
